Add a reset button to clean all choices

--- a/index.html
+++ b/index.html
@@ -27,9 +27,12 @@
         </div>
         <div class="btn-user" id="user">
             <button class="btn" id="rock">rock</button>
-            <button class="btn" id="scissors">scissors</button>
             <button class="btn" id="paper">paper</button>
+            <button class="btn" id="scissors">scissors</button>
 
+        </div>
+        <div>
+            <button id="Reset">Reset</button>
         </div>
     </div>
     <script src="index.js"></script>
