Added Scoreboard to the game

--- a/index.html
+++ b/index.html
@@ -12,7 +12,22 @@
 </head>
 <body>
     <div id="game">
-        <img class="img" src="./image/game-rps.jpg" alt="rock paer scissors img">
+       <h1>Rock Paper Scissors</h1>
+        <div>
+            <h2>Moves Left:</h2>
+        <span id="moves">10</span>
+        </div>
+        <div class="score" id="container">
+           
+            <div>
+                <h2>Player</h2>
+                <span id="player">0</span>
+            </div>
+            <div>
+                <h2>Computer</h2>
+                <span id="computer">0</span>
+            </div>
+        </div>
         <div >
             <h2>Computer Choice:</h2>
             <span id="computer-results"></span>
