Refactor the style

--- a/index.html
+++ b/index.html
@@ -28,17 +28,19 @@
                 <span id="computer">0</span>
             </div>
         </div>
-        <div >
-            <h2>Computer Choice:</h2>
-            <span id="computer-results"></span>
-        </div>
-        <div >
-            <h2>User Choice:</h2>
-            <span id="user-results"></span>
-        </div>
-        <div >
-            <h2>Results:</h2>
-            <span id="result"></span>
+        <div class="choice">
+            <div >
+                <h2>Computer Choice:</h2>
+                <span id="computer-results"></span>
+            </div>
+            <div >
+                <h2>User Choice:</h2>
+                <span id="user-results"></span>
+            </div>
+            <div >
+                <h2>Results:</h2>
+                <span id="result"></span>
+            </div>
         </div>
         <div class="btn-user" id="user">
             <button class="btn" id="rock">rock</button>
